Fix build on different Java version